--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <form action="" id="autosalon" name="autosalon" onsubmit="return false; document.autosalon.email.focus()">
             <h3>Vyberte si  model auta:</h3>
             <label for="vuberAuta"></label>
-            <select name="vyberAuta" id="vyberAuta" onchange="calculateTotal()">
+            <select name="vyberAuta" id="vyberAuta" ">
               <option value="mercedes">Mercedes 1 500 000 Kč</option>
               <option value="volvo">Volvo 1 200 000 Kč</option>
               <option value="audi">Audi 1 350 000 Kč</option>
@@ -22,19 +22,19 @@
             <hr />
               <h3>Vyberte si dodatečnou výbavu automobilu:</h3>
               <label for="parkovaciKamery">
-                <input type="checkbox" id="parkovaciKamery" name="doplnky" value="parkovaciKamery" onclick="calculateTotal()" />Parkovací kamery (+10 000 Kč)
+                <input type="checkbox" id="parkovaciKamery" name="doplnky" value="parkovaciKamery"  />Parkovací kamery (+10 000 Kč)
               </label>
               <br>
               <label for="litaKola">
-                <input type="checkbox" id="litaKola"  name="doplnky" value="litaKola" onclick="calculateTotal()" />Litá kola (+20 000 Kč)
+                <input type="checkbox" id="litaKola"  name="doplnky" value="litaKola"  />Litá kola (+20 000 Kč)
               </label>
               <br>
               <label for="kozeneSedacky">
-                <input type="checkbox" id="kozeneSedacky" name="doplnky" value="kozeneSedacky" onclick="calculateTotal()" />Kožené sedačky (+ 50 000 Kč)
+                <input type="checkbox" id="kozeneSedacky" name="doplnky" value="kozeneSedacky" />Kožené sedačky (+ 50 000 Kč)
               </label>
               <br>
               <label for="tuning">
-                <input type="checkbox" id="tuning" name="doplnky" value="tuning" onclick="calculateTotal()"/>Tuningová úprava (+20 % ze základní ceny vozu)
+                <input type="checkbox" id="tuning" name="doplnky" value="tuning" />Tuningová úprava (+20 % ze základní ceny vozu)
               </label>
               <br>
               <hr>
@@ -44,15 +44,15 @@
 
 
               <label>
-                <input  type="radio" name="selectedColor" value="zakladni" onclick="calculateTotal()"/>Základní barva (bez příplatku)
+                <input  type="radio" name="selectedColor" value="zakladni" />Základní barva (bez příplatku)
               </label>
               <br>
               <label>
-                <input  name="selectedColor"  type="radio" value="palenyLak" onclick="calculateTotal()"/>Pálený lak (s příplatkem 5% ze základní ceny vozu)
+                <input  name="selectedColor"  type="radio" value="palenyLak" />Pálený lak (s příplatkem 5% ze základní ceny vozu)
               </label>
               <br>
               <label >
-                <input  name="selectedColor" type="radio" value="metalicka" onclick="calculateTotal()"/>Metalická barvy (s příplatkem 7% ze základní ceny vozu)
+                <input  name="selectedColor" type="radio" value="metalicka" />Metalická barvy (s příplatkem 7% ze základní ceny vozu)
               </label>
               <hr>
               <br>
